--- a/group_2.ipynb
+++ b/group_2.ipynb
@@ -3731,7 +3731,7 @@
    "id": "62f967fa-8f87-4c4e-b5b2-75066763c5ee",
    "metadata": {},
    "source": [
-    "**Figure 6.** Plot visualizes the density vs probability of subscriptions for KNN, showing significant overlap, which makes sense for our predicted accuracy of 65.7%"
+    "**Figure 6.** Plot visualizes the density vs probability of subscriptions for KNN, meaning counts of true and false subscriptions are represented. Areas with overlap indicate that, at some probability, a true or false occurs, suggesting poor accuracy. This plot shows significant overlap, which makes sense for our predicted accuracy of 65.7%"
    ]
   },
   {
