Added Classification Model Methodology

--- a/group_2.ipynb
+++ b/group_2.ipynb
@@ -2331,7 +2331,22 @@
     "* 70/30 training/testing split\n",
     "* 5-fold cross-validation\n",
     "* target: subscribe\n",
-    "* predictors: experience, age, played_hours"
+    "* all predictors: experience, age, played_hours\n",
+    "\n",
+    "### Methodology\n",
+    "For the first part of making the classification model, the goal was to select the model with predictors that give the highest accuracy. The three predictors from which combinations were made were: experience, age, and played_hours.\n",
+    "\n",
+    "To be able to use experience as a predictor, the factors amateur to veteran were converted to a scale of 1 to 5. \n",
+    "\n",
+    "The players dataset was then split into training and testing with a 70:30 train-test split, stratified by the subscriber status. \n",
+    "\n",
+    "After this, recipes were formed for each combination of predictors, in which the data was also standardized. These recipes were used in tuning the number of nearest neighbors, k. Values of k from 2 to 10 and cross-validation with 5 folds, again stratified by subscriber status, were used in the tuning. The classification model was set to work through k-NN. \n",
+    "\n",
+    "For each of the recipes, the highest accuracy produced with 2$\\leq$k$\\leq$10 were tabulated and arranged in order from largest to smallest. The recipe producing the highest accuracy, which was the recipe including played_hours and age as predictors, was then plotted as mean accuracy vs each k, as shown in Figure 5. The highest k with the lowest fluctation around it was then identified visually to be k=7. \n",
+    "\n",
+    "Using an adjusted model with the found optimal recipe including played_hours and age and nearest neighbors k=7, the training model was fit. \n",
+    "\n",
+    "The model was then used to classify the testing data. The accuracy, kap value, and confusion matrix for the model were produced based on this."
    ]
   },
   {
@@ -3055,7 +3070,7 @@
    "id": "4904e2b4-d2ad-4a6e-8ec0-dbc874672369",
    "metadata": {},
    "source": [
-    "**Figure 5.** Line plot of mean accuracy shows that k=5 gives the highest accuracy. (with least fluctutation around it)\n"
+    "**Figure 5.** Line plot of mean accuracy shows that k=7 gives the highest accuracy. (with least fluctutation around it)\n"
    ]
   },
   {
@@ -3093,7 +3108,7 @@
     }
    ],
    "source": [
-    "#Now, using k=5 and newspaper_AH_recipe:\n",
+    "#Now, using k=7 and newspaper_AH_recipe:\n",
     "set.seed(1234)\n",
     "\n",
     "newspaper_AH_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 7) |>\n",
