Added Methodology for Part 4.2

--- a/group_2.ipynb
+++ b/group_2.ipynb
@@ -3754,7 +3754,18 @@
    "id": "b323c341-c1ed-42bf-8ad9-087a094cfd53",
    "metadata": {},
    "source": [
-    "# 4.2 Data Analysis - Part 2: Regression Model to find probability"
+    "# 4.2 Data Analysis - Part 2: Regression Model to find probability\n",
+    "In part 4.2, the logistic regression model mentioned above was used to predict the subscription status of each player in the testing data.\n",
+    "### Methodology\n",
+    "Firstly, the model specification of the linear regression model was set by the logistic_reg() function. Since we are eventually classifying the data using linear regression, the classification mode was used in specification. \n",
+    "\n",
+    "Then the workflow was built by using the specification of linear regression model and recipe with Age and Hours predictors, which was found to yield the prediction with the highest accuracy in KNN classification model from part 4.1. \n",
+    "\n",
+    "Subsequently, the workflow was passed to fit the training data into the model and train the linear regression model.  \n",
+    "\n",
+    "After fitting the model, the predict() function was used to actually predict the testing data using the trained linear regression model. \n",
+    "\n",
+    "Then, the column of predictions was attached to the original data frame containing true subscription status. Using this, a confusion matrix that quantifies the number of true positive predictions out of all predictions was built using a conf_mat() function to determine the accuracy of the linear regression model. Then, the metrics that indicate the accuracy and kappa value of the model was built by a metrics() function. "
    ]
   },
   {
