Added more explanation for Part 4.2 and Discussion

--- a/group_2.ipynb
+++ b/group_2.ipynb
@@ -3756,6 +3756,11 @@
    "source": [
     "# 4.2 Data Analysis - Part 2: Regression Model to find probability\n",
     "In part 4.2, the logistic regression model mentioned above was used to predict the subscription status of each player in the testing data.\n",
+    "\n",
+    "We chose Logistic Regression over other classification methods because our outcome variable, subscribe, is a logical (binary) variable with only two options, which are True or False. Since we cannot predict a continuous number for a logical variable, we cannot use linear and KNN regression methods that calculate the distance from a line. Instead, we use Logistic Regression to calculate the probability (likelihood) that a specific observation belongs to the 'True' category.\n",
+    "\n",
+    "Unlike the classification we have been doing in the course so far, we can not output TRUE/FALSE directly, as there is no guarantee that our classification is rarely 100% certain. Instead, there is a certainty of each observation to be classified right. In one case, we are 51% confident that this person belongs to the TRUE category. In another case, we are 90% confident that this person belongs to the TRUE category. In the classification that we have been doing so far, we don’t take into account how confident our classification is, which can not be a good statistical measure.\n",
+    "\n",
     "### Methodology\n",
     "Firstly, the model specification of the linear regression model was set by the logistic_reg() function. Since we are eventually classifying the data using linear regression, the classification mode was used in specification. \n",
     "\n",
@@ -4461,9 +4466,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3616ca0-20bd-4a43-a860-94ba50862af7",
+   "metadata": {},
+   "source": [
+    "In the prediction made by the kNN classification model, the accuracy of prediction about newspaper subscription is 65.7%. Meanwhile, the accuracy of the prediction made by the logistic regression model is about 73.7%, which is about 8% higher than the accuracy of the prediction made by KNN classification model.\n",
+    "\n",
+    "This indicates that prediction of subscription status using a logistic regression model yields a more accurate prediction of player subscription than the KNN classification model. \n",
+    "\n",
+    "This result is expected, since the logistic regression model is not affected by the noise unlike the KNN classification model. Also, the logistic regression model classified the observation based on how confident the model is for its prediction instead of classifying the observation directly like KNN. \n",
+    "\n",
+    "However, it must be noted that both models have extremely low kappa values. A kappa value of 0 is given by the logistic regression model, meaning that the agreement between the model’s classifications and true values are, in essence, random. The kNN classification model has a kappa below 0, meaning that the model is even worse at classifying than if classification would have been done with random guessing.\n",
+    "\n",
+    "Although this model is flawed, it can be used to predict whether or not a player will subscribe to the newsletter. \n",
+    "\n",
+    "For future implications, the first thing that must be investigated is how to improve these models. The best way to do this would be to gather more data in order to have more data points and possibly a higher balance of subscribed vs non-subscribed. An important question to be investigated is which attributes are most likely to lead to players subscribing. This would help identify which potential players are important to target, as they are likely to have an interest in providing more data for the Minecraft server. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b64d5707-78d2-4ef3-9de4-d979401138d1",
+   "id": "f949598c-021f-4c6b-a2a0-9976e6c2ba00",
    "metadata": {},
    "outputs": [],
    "source": []
