Small Wording Changes

--- a/group_2.ipynb
+++ b/group_2.ipynb
@@ -2399,7 +2399,9 @@
     "\n",
     "Using an adjusted model with the found optimal recipe including `played_hours` and `age` and nearest neighbors k=5, the training model was fit. \n",
     "\n",
-    "The model was then used to classify the testing data. The accuracy, kap value, and confusion matrix for the model were produced based on this."
+    "The model was then used to classify the testing data. The accuracy, kap value, and confusion matrix for the model were produced based on this.\n",
+    "\n",
+    "The model for classification was then used to also predict the probabilities of subscription."
    ]
   },
   {
@@ -4403,8 +4405,8 @@
    "id": "b323c341-c1ed-42bf-8ad9-087a094cfd53",
    "metadata": {},
    "source": [
-    "# 4.2 Data Analysis - Part 2: Regression Model to find probability\n",
-    "In part 4.2, the logistic regression model mentioned above was used to predict the subscription status of each player in the testing data.\n",
+    "# 4.2 Data Analysis - Part 2: Logistic Regression Model\n",
+    "In part 4.2, a logistic regression model is used to predict the subscription status of each player in the testing data.\n",
     "\n",
     "We chose Logistic Regression over other classification methods because our outcome variable, subscribe, is a logical (binary) variable with only two options, which are True or False. Since we cannot predict a continuous number for a logical variable, we cannot use linear and KNN regression methods that calculate the distance from a line. Instead, we use Logistic Regression to calculate the probability (likelihood) that a specific observation belongs to the 'True' category.\n",
     "\n",
@@ -5073,10 +5075,10 @@
     "**Conclusion**  \n",
     "Our results show that played hours and age are meaningful predictors of subscription behaviour. Logistic regression produced the strongest predictive performance, with an accuracy of 75.8% compared to 72.7% for KNN Classification. This indicates that logistic regression generalizes better on this dataset and provides more stable probability estimates. This answers our research question by identifying both the most important predictors and the most effective model for estimating subscription probability.\n",
     "\n",
-    "**Initial Expectations**  \n",
+    "**Predictor Expectations and Analysis**  \n",
     "At the beginning of the project, the group hypothesized that the experience and/or played hours variables would be better predictors of subscription status than the age variable.  The initial reasoning was that individuals who are experienced or put more effort into the game must be more passionate and therefore more inclined to subscribe. However, after analysis of accuracy in each predictor, it was discovered that age and played hours were most consequential, suggesting that certain ages that resulted in x amount of hours played would be an area for further investigation. \n",
     "\n",
-    "**Model Analysis**  \n",
+    "**Model Expectations and Analysis**  \n",
     "For the model, it was predicted that logistic regression would be a better model than KNN. The difference in model performance was as expected. Logistic regression achieves higher accuracy because the dataset is imbalanced, so the model ends up predicting all cases as TRUE. Although this means it fails to identify any non-subscribers, it performs well on the majority group of subscribers. KNN, which relies on local neighbourhoods, incorrectly predicts some TRUE cases as false and is more affected by noise and imbalance, resulting in lower accuracy overall. For this reason, logistic regression is chosen as the better-performing model in this context, though its inability to detect the minority class remains a limitation.\n",
     "\n",
     "Although the classification model has a precision of 75% and a recall of 96%, these metrics only reflect performance on the positive class. When examining the confusion matrix, it is seen that no true negatives are correctly predicted. Every time a player is not subscribed, they are predicted as being subscribed. However, some players who are suscribed are predicted to not subscribe. The logistic regression model gives a precision of 75.8% and a recall of 100%. This is because the model predicts everything as true, thereby correctly identifying all true subscribers but failing to correctly identify any non-subscribers.\n",
